# Programming-projects-LETI

./: README.md
BasicStringMethods/: CMakeLists.txt  constants.h  functionality.cpp  functionality.h  main.cpp
CalculatorWithArrowControl/: CMakeLists.txt  functionality.c  functionality.h  main.c
ComparingContentOfTwoFiles/: CMakeLists.txt  first.txt  functionality.cpp  functionality.h  helpFunc.cpp  helpFunc.h  main.cpp  second.txt
DesktopApplicationStudentProgressReport/: CMakeLists.txt  calendarwidget.cpp  calendarwidget.h  calendarwidget.ui  findwidget.cpp  findwidget.h  findwidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  showresultwidget.cpp  showresultwidget.h  showresultwidget.ui
DesktopApplicationStudentProgressReport/models/: Student.cpp  Student.h  Subject.cpp  Subject.h
HierarchicalStructureOfDataStorage/: CMakeLists.txt  ConsoleCp.h  Department.cpp  Department.h  Faculty.cpp  Faculty.h  FileManager.cpp  FileManager.h  Group.cpp  Group.h  Messages.cpp  Messages.h  Student.cpp  Student.h  University.cpp  University.h  constants.h  main.cpp  supportFunctions.cpp  supportFunctions.h  validationFunctions.cpp  validationFunctions.h
OperationsOnMatrices/: CMakeLists.txt  constants.h  functionality.cpp  functionality.h  main.cpp
Pacman/src/pacman/: CMakeLists.txt  main.cpp
Pacman/src/pacman/Config/: config.cpp  config.h
Pacman/src/pacman/Game/: game.cpp  game.h
Pacman/src/pacman/GameTile/: __barrel__.h  game_tile.cpp  game_tile.h
Pacman/src/pacman/GameTile/Edible/: __barrel__.h  edible.cpp  edible.h
Pacman/src/pacman/GameTile/Edible/Food/: food.cpp  food.h
Pacman/src/pacman/GameTile/Edible/Fruit/: fruit.cpp  fruit.h
Pacman/src/pacman/GameTile/Edible/PowerPellet/: power_pellet.cpp  power_pellet.h
Pacman/src/pacman/GameTile/Movable/: __barrel__.h  movable.cpp  movable.h
Pacman/src/pacman/GameTile/Movable/Ghost/: ghost.cpp  ghost.h
Pacman/src/pacman/GameTile/Movable/Ghost/Blinky/: blinky.h
Pacman/src/pacman/GameTile/Movable/Ghost/Clyde/: clyde.h
Pacman/src/pacman/GameTile/Movable/Ghost/Inky/: inky.h
Pacman/src/pacman/GameTile/Movable/Ghost/Pinky/: pinky.h
Pacman/src/pacman/GameTile/Movable/Pacman/: pacman.cpp  pacman.h
Pacman/src/pacman/GameTile/Wall/: wall.cpp  wall.h
Pacman/src/pacman/MainMenu/: main_menu.cpp  main_menu.h
Pacman/src/pacman/MainMenu/MenuAnimation/: menu_animation.cpp  menu_animation.h
Pacman/src/pacman/MainMenu/MenuEntry/: menu_entry.cpp  menu_entry.h
Pacman/src/pacman/PerfLogger/: performance_logger.cpp
Pacman/src/pacman/RNG/: rng.cpp
Pacman/src/pacman/WindowTitle/: window_title.cpp  window_title.h
QT/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QtClientServerApplication/ClientPart/: CMakeLists.txt  client.cpp  client.h  client.ui  main.cpp
QtClientServerApplication/ServerPart/: CMakeLists.txt  main.cpp  server.cpp  server.h
SingleLinkedList/: AddInListFunctions.cpp  AllFunctions.h  BaseFunctions.cpp  CMakeLists.txt  DeleteFromListFunctions.cpp  SortingFunctions.cpp  constants.h  functionality.cpp  functionality.h  main.cpp
SnakeGame/: CMakeLists.txt  constants.h  functionality.c  functionality.h  main.c
Spriral/: CMakeLists.txt  functionality.c  functionality.h  main.c
Tic-tac-toe/: CMakeLists.txt  functionality.c  functionality.h  main.c
